--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A command-line address book in node.js",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "set NODE_ENV=test && jasmine"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/StephenJMarden/address-bloc#readme",
   "dependencies": {
     "inquirer": "^6.2.0"
+  },
+  "devDependencies": {
+    "jasmine": "^3.2.0"
   }
 }
