--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "homepage": "https://github.com/StephenJMarden/address-bloc#readme",
   "dependencies": {
-    "inquirer": "^6.2.0"
+    "inquirer": "^6.2.0",
+    "pg": "^7.5.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.39.0"
   },
   "devDependencies": {
     "jasmine": "^3.2.0"
